--- a/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YHn-Wr-ERa">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Conversion View Controller-->
+        <!--Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ConversionViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
@@ -75,6 +75,7 @@
                             <outletCollection property="gestureRecognizers" destination="Gae-7a-1k5" appends="YES" id="FRv-HN-MIo"/>
                         </connections>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="AQu-iz-cOl"/>
                     <connections>
                         <outlet property="celsiusLabel" destination="ObR-bu-nWk" id="vHi-lq-to8"/>
                         <outlet property="textField" destination="I9n-oy-VVb" id="Uf1-Xz-VgR"/>
@@ -87,9 +88,9 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="7" y="217"/>
+            <point key="canvasLocation" x="697" y="588"/>
         </scene>
-        <!--View Controller-->
+        <!--Item-->
         <scene sceneID="vPR-Z5-nx3">
             <objects>
                 <viewController id="mT6-Wh-PR1" sceneMemberID="viewController">
@@ -97,10 +98,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </mapView>
+                    <tabBarItem key="tabBarItem" title="Item" id="MF5-pd-aik"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FLr-bh-kLR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="695" y="216"/>
+            <point key="canvasLocation" x="698" y="-87"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="fl8-LC-DdS">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="YHn-Wr-ERa" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="spR-zY-vJQ">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="mT6-Wh-PR1" kind="relationship" relationship="viewControllers" id="oHA-kn-Cth"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="nzI-w3-YhN"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ccR-xa-MuE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-90" y="233"/>
         </scene>
     </scenes>
 </document>
