--- a/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Convert-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ConversionViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
@@ -75,7 +75,7 @@
                             <outletCollection property="gestureRecognizers" destination="Gae-7a-1k5" appends="YES" id="FRv-HN-MIo"/>
                         </connections>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="AQu-iz-cOl"/>
+                    <tabBarItem key="tabBarItem" title="Convert" image="ConvertIcon" id="AQu-iz-cOl"/>
                     <connections>
                         <outlet property="celsiusLabel" destination="ObR-bu-nWk" id="vHi-lq-to8"/>
                         <outlet property="textField" destination="I9n-oy-VVb" id="Uf1-Xz-VgR"/>
@@ -90,7 +90,7 @@
             </objects>
             <point key="canvasLocation" x="697" y="588"/>
         </scene>
-        <!--Item-->
+        <!--Map-->
         <scene sceneID="vPR-Z5-nx3">
             <objects>
                 <viewController id="mT6-Wh-PR1" sceneMemberID="viewController">
@@ -98,7 +98,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </mapView>
-                    <tabBarItem key="tabBarItem" title="Item" id="MF5-pd-aik"/>
+                    <tabBarItem key="tabBarItem" title="Map" image="MapIcon" id="MF5-pd-aik"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FLr-bh-kLR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -114,8 +114,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="mT6-Wh-PR1" kind="relationship" relationship="viewControllers" id="oHA-kn-Cth"/>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="nzI-w3-YhN"/>
+                        <segue destination="mT6-Wh-PR1" kind="relationship" relationship="viewControllers" id="oHA-kn-Cth"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ccR-xa-MuE" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -123,4 +123,8 @@
             <point key="canvasLocation" x="-90" y="233"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ConvertIcon" width="48" height="32"/>
+        <image name="MapIcon" width="48" height="32"/>
+    </resources>
 </document>
