--- a/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/Base.lproj/Main.storyboard
@@ -88,12 +88,12 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="697" y="588"/>
+            <point key="canvasLocation" x="694" y="-83"/>
         </scene>
         <!--Map-->
         <scene sceneID="vPR-Z5-nx3">
             <objects>
-                <viewController id="mT6-Wh-PR1" sceneMemberID="viewController">
+                <viewController id="mT6-Wh-PR1" customClass="MapViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
                     <mapView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="i1I-3q-Zgn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -102,7 +102,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FLr-bh-kLR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="698" y="-87"/>
+            <point key="canvasLocation" x="694" y="581"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="fl8-LC-DdS">
