--- a/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/Base.lproj/Main.storyboard
@@ -100,6 +100,22 @@
             </objects>
             <point key="canvasLocation" x="694" y="581"/>
         </scene>
+        <!--Web-->
+        <scene sceneID="gNP-Zx-k2t">
+            <objects>
+                <viewController id="00r-bX-yOo" customClass="WebViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Vta-ro-ODU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="oxi-2R-fGw"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Web" id="omb-Nq-aWr"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MfF-BA-8Ph" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="694" y="1355"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="fl8-LC-DdS">
             <objects>
@@ -113,11 +129,12 @@
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="nzI-w3-YhN"/>
                         <segue destination="mT6-Wh-PR1" kind="relationship" relationship="viewControllers" id="oHA-kn-Cth"/>
+                        <segue destination="00r-bX-yOo" kind="relationship" relationship="viewControllers" id="bu0-ar-W3m"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ccR-xa-MuE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-90" y="233"/>
+            <point key="canvasLocation" x="-401" y="1028"/>
         </scene>
     </scenes>
     <resources>
